# bedrock-agent-ta/get-index/get-index-lambda/app.py
@@ -32,11 +32,45 @@ def lambda_handler(event, context):
     #     print(e)
 
     #     raise e
+    
+    print(event)
+    responses = []
+    api_path = event['apiPath']
+    if api_path=="/get-index":
+        if event['inputText'] == 'brtIndex'
+            body = {"stocksList":['MSFT','AAPL','AMZN','NVDA','META','GOOG','NFLX','ADBE','QCOM','CSCO']}
+        else:
+            body = {"{} is not a valid Index, try another index ".format(event['inputText'])}
+
+    else:
+        body = {"{} is not a valid api, try another one.".format(api_path)}
+
+    response_body = {
+        'application/json': {
+            'body': json.dumps(body)
+        }
+    }
+
+    action_response = {
+        'actionGroup': event['actionGroup'],
+        'apiPath': event['apiPath'],
+        'httpMethod': event['httpMethod'],
+        'httpStatusCode': 200,
+        'responseBody': response_body
+    }
+
+    responses.append(action_response)
+
+    api_response = {
+        'messageVersion': '1.0',
+        'response': action_response}
+
+    return api_response
 
     return {
         "statusCode": 200,
         "body": json.dumps({
-            "brtIndex": ['MSFT','AAPL','AMZN','NVDA','META','GOOG','NFLX','ADBE','QCOM','CSCO'],
+            "brtIndex": index_list,
             # "location": ip.text.replace("\n", "")
         }),
     }
